20060810
	- Assembler:    Fixed bug in DCB
	- Assembler:    Added support for .req register aliasing
	- Assembler:    Added support for character escapes in strings
	- Assembler:    Added support for @ comments and pseudo instructions
	- Assembler:    Rewrote and improved the asm input parser
	- ARM Debugger: Addded "W" (Where) command
	- ARM Debugger: Addded "CPSR" and "SPSR" commands
	- ARM Debugger: Addded "Q" (Quiet) prefix for "C" command
	- Instructions: All remaining DPI: RSB, RSC, TST, TEQ, BIC
	- Instructions: CIES instructions: BX,  BLX, CLZ, BKPT
	- Instructions: Standard multiply: MUL, MLA
	- Instructions: MIES (Execution only): STRH, LDRH, LDRSB, LDRSH
	- Global Fixes: Added support for large immediates by rotation.
	- Global Fixes: Convert to hex addressing
	- Global Fixes: Fatal errors now return to the ARM Debugger if active
	- Global Fixes: All errors now provide better location information
	- Global Fixes: Many minor changes
	- Global Fixes: Fix support for FOP2 rotate and shift by 0 and 32
	- Other:        Added support for ELF binary loading
	- Other:        Major improvements to ARM Simulator Update

20051115
	- Debugging Information Format now supports compressed debugging
	  information ("ZBG", default), or the old uncompressed "DBG" format.
	- Debugging Information now includes line numbers, not currently
	  used in debugger.
	- Added --no-zlib (Refuse to read or write "ZBG" DIF) and
	  --dump-debuginfo (Decompress/Dump DIF) options.
	- Fixed some bugs with use of shorthand LR=R14 and implemented
	  shorthands SP=R13, IP=R12, FP=R11, SL=R10.
	- Added support for LDM/STM.
	- The assembler now allows labels that are not designated with a :,
	  all instructions must now be indented.
	- Fixed LDR/PC bug

20050811
	- ARM Debugger fixed, improved disassembler to take advantage of
	  debugging information
	- Removed needless mucking about with |s, %labels and $lastlabel.

20050802
	- Fixed some memory bugs