@@ -1,0 +1,5 @@
+#include "armsim.h"
+int main(int argc, char *argv[]) {
+  printf("%d\n",argc);
+  return 0;
+}
