@@ -1,3 +1,5 @@
+	MOV R14, #9
+	MOV R15, R14
 	LDR R0, sa
 	LDR R1, sb
 	CMP R0, R1, LSR #1
